# Python_Trading_App

./: .gitignore  README.md  main.py  pyproject.toml  scheduler.py  tickers.csv
