[project]
name = "python-trading-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.109.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "snowflake-connector-python>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
